--- a/webapp/index.html
+++ b/webapp/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="app.css">
         <script src="UserCanvas.js"></script>
         <title>Brazo Robótico</title>
@@ -10,38 +10,46 @@
     <body>
         <input id="ip" placeholder="IP de Robot">
         <button id="my_button">Conectar</button><br>
-        <div style="">
-            Q2: <button id="q2p">+</button><button id="q2n">-</button><br>
-            Q3: <button id="q3p">+</button><button id="q3n">-</button><br>
-            Q4: <button id="q4p">+</button><button id="q4n">-</button><br>
-            Q5: <button id="q5p">+</button><button id="q5n">-</button><br>
+        <br>
+        <div class="slidecontainer">
+            <input type="range" min="1" max="50" value="10" class="slider" id="dimRange">
+            <span id="dim" style="font-family: monospace;">10</span>
+        </div>
+        <div style="display: none;">
+            <button onclick="move(2,-1)">-</button>Q2<button onclick="move(2,1)">+</button>
+            <button onclick="move(3,-1)">-</button>Q3<button onclick="move(3,1)">+</button>
+            <button onclick="move(4,-1)">-</button>Q4<button onclick="move(4,1)">+</button>
+            <button onclick="move(5,-1)">-</button>Q5<button onclick="move(5,1)">+</button>
+        </div>
+        <button style="display:none" onclick="UserCanvas.fullscreen()">Fullscreen</button>
+        <div id="canvas_body">
+            <canvas id="canvas"></canvas>
         </div>
         <br>
         <br>
-
-        <canvas id="canvas"></canvas>
-        <br>
         <button id="sendBtn">Dibujar ✏️</button>
-        <button onclick="UserCanvas.clear()">Borrar ❌</button>
+        <button onclick="UserCanvas.clear()">Borrar Todo❌</button>
+        <button onclick="UserCanvas.eraseLast()">Borrar Ultimo❌</button>
+        <br>
+        <span style="font-size:14px">Puntos cargados: </span><span id="count">0</span>
         <br>
         <br>
         <span id="msg" style="font-size:20px"></span>
+        <div style="position:absolute; bottom: 0; right: 0"><i>by <b>Julián Delekta</b></i></div>
         <script>
             const my_button = document.getElementById("my_button")
             const input_ip  = document.getElementById("ip")
             const sendBtn   = document.getElementById("sendBtn")
             const msg       = document.getElementById("msg")
             const xhr = new XMLHttpRequest()
+            const xhr_dim = new XMLHttpRequest()
+            const count = document.getElementById("count")
 
-            const moveSend = (q, d) => () => {
+            const move = (q, d) => {
+                console.log("move", q, d)
                 xhr.open("POST", "/move", true)
                 xhr.setRequestHeader("Content-Type", "application/x-www-form-urlencoded")
-                xhr.send(`q=${q}&d=${d}`)
-            }
-            
-            for (let i = 2; i <= 5; i++) {
-                document.getElementById("q" + i + "p").onclick = moveSend(i, "p")
-                document.getElementById("q" + i + "n").onclick = moveSend(i, "n")
+                xhr.send(`q=${q}&d=${d < 0 ? "n" : "p"}`)
             }
 
             my_button.onclick = () => {
@@ -56,11 +64,28 @@
 
                     if (xhr.status === 200) {
                         if (xhr.response === "connected") {
+                            requestDimensions()
+
                             alert("Conectado")
                         } else if (xhr.response === "end_draw") {
                             msg.innerText = "Finalizó 😁"
                         } else {
-                            alert(xhr.response)
+                            console.log(xhr.response)
+                        }
+                    }
+                }
+            }
+
+            function requestDimensions() {
+                xhr_dim.open("POST", "/dim", true)
+                xhr_dim.setRequestHeader("Content-Type", "application/x-www-form-urlencoded")
+                xhr_dim.send("")
+                
+                xhr_dim.onreadystatechange = () => {
+                    if (xhr_dim.readyState === XMLHttpRequest.DONE) {
+                        if (xhr_dim.status === 200) {
+                            const [width, height] = xhr_dim.response.split("|")
+                            UserCanvas.setDimensions(parseFloat(width), parseFloat(height))
                         }
                     }
                 }
@@ -80,6 +105,11 @@
                 msg.innerText = "Dibujando... ✏️"
                 sendBtn.disabled = true
             }
+
+            document.getElementById("dimRange").addEventListener("input", e => {
+                document.getElementById("dim").innerText = (""+e.target.value).padStart(2, "0")
+                UserCanvas.DIM = e.target.value
+            }, true)
 
         </script>
     </body>
